feat: parse data from actual Lua files

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,5 @@
 # Factorio Lua to JSON Exporter - Requirements
-# No external dependencies required - uses only Python standard library
 # Tested with Python 3.8+
+
+# Lua interpreter for Python - to evaluate Lua expressions
+lupa>=1.14
